# ChangeLog for dev-libs/libtasn1
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.169 2012/09/26 21:42:19 radhermit Exp $

*libtasn1-2.14 (26 Sep 2012)

  26 Sep 2012; Tim Harder <radhermit@gentoo.org> +libtasn1-2.14.ebuild:
  Version bump and switch to virtual/yacc dep instead of bison specifically.

*libtasn1-2.13 (01 Jun 2012)

  01 Jun 2012; Tim Harder <radhermit@gentoo.org> +libtasn1-2.13.ebuild:
  Version bump.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> libtasn1-2.12.ebuild:
  keyword ~amd64-fbsd

  29 Mar 2012; Tim Harder <radhermit@gentoo.org> -libtasn1-2.11.ebuild:
  Remove old.

  28 Mar 2012; Brent Baude <ranger@gentoo.org> libtasn1-2.12.ebuild:
  Marking libtasn1-2.12 ppc64 for bug 409031

  25 Mar 2012; Brent Baude <ranger@gentoo.org> libtasn1-2.12.ebuild:
  Marking libtasn1-2.12 ppc for bug 409031

  24 Mar 2012; Raúl Porcel <armin76@gentoo.org> libtasn1-2.12.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #409031

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libtasn1-2.12.ebuild:
  x86 stable wrt bug #409031

  23 Mar 2012; Agostino Sarubbo <ago@gentoo.org> libtasn1-2.12.ebuild:
  Stable for amd64, wrt bug #409031

  22 Mar 2012; Jeroen Roovers <jer@gentoo.org> libtasn1-2.12.ebuild:
  Stable for HPPA (bug #409031).

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> -libtasn1-2.9-r1.ebuild,
  -libtasn1-2.10.ebuild:
  Remove old.

*libtasn1-2.12 (19 Mar 2012)

  19 Mar 2012; Tim Harder <radhermit@gentoo.org> +libtasn1-2.12.ebuild:
  Version bump.

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> libtasn1-2.11.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #404653

  06 Mar 2012; Brent Baude <ranger@gentoo.org> libtasn1-2.11.ebuild:
  Marking libtasn1-2.11 ppc64 for bug 404653

  05 Mar 2012; Markus Meier <maekke@gentoo.org> libtasn1-2.11.ebuild:
  arm stable, bug #404653
