@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/libtasn1-2.12.ebuild,v 1.8 2012/04/26 15:50:21 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/libtasn1-2.12.ebuild,v 1.9 2012/09/26 23:16:40 radhermit Exp $
 
 EAPI=4
 
@@ -16,7 +16,7 @@ KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~amd6
 IUSE="doc static-libs"
 
 DEPEND=">=dev-lang/perl-5.6
-	sys-devel/bison"
+	virtual/yacc"
 
 DOCS=( AUTHORS ChangeLog NEWS README THANKS )
 
