@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libtasn1
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.169 2012/09/26 21:42:19 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.170 2012/09/26 23:16:40 radhermit Exp $
+
+  26 Sep 2012; Tim Harder <radhermit@gentoo.org> libtasn1-2.12.ebuild,
+  libtasn1-2.13.ebuild:
+  Use virtual/yacc instead of explicit bison dep.
 
 *libtasn1-2.14 (26 Sep 2012)
 
